[tool.poetry]
name = "mazes"
version = "0.1.0"
description = ""
authors = ["Francisco Ruiz <ffruiz@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0,<4.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
tabulate = "^0.9.0"
tqdm = "^4.66.1"
scalene = "^1.5.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
